--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'simple-spring-boot-mysql'
-    version = '0.0.3-SNAPSHOT'
+    version = '0.0.4-SNAPSHOT'
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -25,11 +25,21 @@ repositories {
     mavenCentral()
 }
 
-
 dependencies {
+    // tag::jetty[]
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: "spring-boot-starter-tomcat"
+    }
+    compile('org.springframework.boot:spring-boot-starter-jetty')
+    // end::jetty[]
+    // template
     compile('org.springframework.boot:spring-boot-starter-mustache')
+    // database
     compile('org.springframework.boot:spring-boot-starter-jdbc')
-    compile('org.springframework.boot:spring-boot-devtools')
+    // utilities
     compile('com.google.guava:guava:20.0')
+    // management services
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+
     runtime('mysql:mysql-connector-java')
 }
